ChangeLog

Feb 2018: recursive implementation of multigrid

7 Feb 2018: added conductionQ2, which is about 1/3 faster than the legendary conductionQ

16 Dec 2017: first version of 3D illumination code for Mars

4 Oct 2017: Release v1.1.4  doi:10.5281/zenodo.1001854

24 Aug 2017: gethorizon has been transformed into a module to allow elemental attribute, and thus parallelization

2 Aug 2017: first implementation of multigrid method for horizons calculation

1 Aug 2017: finished subroutine findallhorizon, which replaces findonehorizon in shadows.f90

16 Jul 2017: Release v1.1.3  doi:10.5281/zenodo.830052

20 Oct 2016: Release v1.1.2  doi:10.5281/zenodo.162490

9 Oct 2016: First version of User Guide

3 Apr 2016: Release v1.1.1  doi:10.5281/zenodo.48851

19 Dec 2015: Release v1.1.0  doi:10.5281/zenodo.35566

19 Dec 2015: final version of asynchronous model for ice loss from asteroids

22 Oct 2015: Release v1.0  doi:10.5281/zenodo.32616

Aug 2015: moved to GitHub

9 Jul 2015: restructured lunar exosphere model, so geographic grid can be swapped out

1 Jun 2015: added 3D model of shadowing and illumination (incl. reflection and thermal emission) on planetary surfaces; good enough for small topographies

5 Feb 2015: added lunar Monte Carlo model for exospheric transport of water molecules

3/4 Jun 2014: changed NMAX=2000 to NMAX=1000 almost everywhere

31 May 2014: added a few simple routines for thermal modeling of asteroids; reorganized webpage

4 Sep 2011: better implementation of "mode 2" ice growth, affecting fast_subs_mars.f90 and fast_subs_univ.f90

25 Aug 2011: generalizations to mars_fast.f90, fast_modules.f90, and fast_subs_mars.f90

20 Jul 2011: technical updates (generalizations) to grids.f, jsub.f, mars_mapt2.f, and mars_mapi.f

28 Mar 2010: updated fast_subs_mars.f90; icelayer_mars has been parallelized, but parallelization is disabled by default; fewer calls to conductionT in ajsub_mars

27 Mar 2010: minor polish of the very old program mars_thermal1d.f
