@@ -129,15 +129,6 @@ module allinterfaces
   end interface
 
   interface
-     pure function colint(y,z,nz,i1,i2)
-       implicit none
-       integer, intent(IN) :: nz, i1, i2
-       real(8), intent(IN) :: y(nz),z(nz)
-       real(8) colint
-     end function colint
-  end interface
-
-  interface
      subroutine compactoutput(unit,sigma,nz)
        implicit none
        integer, intent(IN) :: unit,nz
@@ -206,15 +197,6 @@ module allinterfaces
      end function pareto
   end interface
 
-  interface ! moved to grids.f
-     subroutine dzvector(nz,z,dz) 
-       implicit none
-       integer, intent(IN) :: nz
-       real(8), intent(IN) :: z(nz)
-       real(8), intent(OUT) :: dz(nz)
-     end subroutine dzvector
-  end interface
-
   interface
      integer function gettype(zdepth,nz,z)
        implicit none
@@ -223,7 +205,7 @@ module allinterfaces
      end function gettype
   end interface
 
-  ! Common/*.f90
+  ! Common/{*.f,*.f90}
   interface
      elemental real(8) function flux_noatm(R,decl,latitude,HA,surfaceSlope,azFac)
        implicit none
@@ -231,6 +213,24 @@ module allinterfaces
      end function flux_noatm
   end interface
 
+  interface
+     pure function colint(y,z,nz,i1,i2)
+       implicit none
+       integer, intent(IN) :: nz, i1, i2
+       real(8), intent(IN) :: y(nz),z(nz)
+       real(8) colint
+     end function colint
+  end interface
+
+  interface
+     subroutine dzvector(nz,z,dz) 
+       implicit none
+       integer, intent(IN) :: nz
+       real(8), intent(IN) :: z(nz)
+       real(8), intent(OUT) :: dz(nz)
+     end subroutine dzvector
+  end interface
+  
   interface
      subroutine deriv1(z,nz,y,y0,yNp1,yp)
        implicit none
