@@ -76,15 +76,6 @@ module allinterfaces
      end function zint
   end interface
 
-  interface  ! moved to grids.f
-     pure function colint(y,z,nz,i1,i2)
-       implicit none
-       integer, intent(IN) :: nz, i1, i2
-       real(8), intent(IN) :: y(nz),z(nz)
-       real(8) colint
-     end function colint
-  end interface
-
   interface
      pure function equildepth(nz, z, rhosatav, rhosatav0, avrho1)
        implicit none
@@ -251,5 +242,15 @@ module allinterfaces
   end interface
   
   !end fast_subs_exper
+
+  ! Common/*.f
+  interface
+     pure function colint(y,z,nz,i1,i2)
+       implicit none
+       integer, intent(IN) :: nz, i1, i2
+       real(8), intent(IN) :: y(nz),z(nz)
+       real(8) colint
+     end function colint
+  end interface
 
 end module allinterfaces
