@@ -1,5 +1,7 @@
 ChangeLog
 
+Aug 2018: moved mars-specific subroutines out of grids.f
+
 Feb 2018: recursive implementation of multigrid
 
 7 Feb 2018: added conductionQ2, which is about 1/3 faster than the legendary conductionQ
